--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-merlot
 
-title: TechsStart Portfolio
+title: TechStart Portfolio
 
 description: I am working through the 5 TechStart. Johna Byrum
